[package]
name = "milkpq"
version = "0.1.0"
authors = ["Grayson Burton <ocornoc@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A concurrent, relaxed priority queue"
repository = "https://github.com/ocornoc/milkpq"

[dependencies]
num_cpus = "1.13"
rand = {version = "0.7.3", features = ["small_rng"]}
rand_distr = "0.3"
ref_thread_local = "0.0.0"

[dev-dependencies]
rayon = "1.5"
parking_lot = "0.11"
criterion = "0.3"
ordered-float = "2.0.0"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "compare"
harness = false
